ncc/testsuite/positive/Issue-1135.n
using System.Console;

interface IX
{
}

class X : IX
{
  public ToString(_fmt : string) : string
  {
    "X"
  }
}

class Y : X
{
}

enum E
{
  | A
}

module Program
{
  Main() : void
  {
    Foo(Y());
    Bar(E.A);
  }

  Foo[T](x : T) : void 
   where T: X, IX
  {
    WriteLine(x.ToString(""))
  }

  Bar[T](x : T) : void
    where T: struct, System.IFormattable
  {
    WriteLine(x.ToString("", System.Globalization.CultureInfo.CurrentCulture));
  }
}
/*
X
A
*/